@@ -26,7 +26,7 @@ public class HMEntry extends JavaLangObject implements JavaUtilEntry {
 
     public HMEntry(final quotes.NIL var_1_1) throws CGException {
         this();
-        isNil = (Boolean) UTIL.clone(new Boolean(true));
+        isNil = Boolean.TRUE;
     }
 
 
@@ -73,8 +73,8 @@ public class HMEntry extends JavaLangObject implements JavaUtilEntry {
 
 
     public Boolean equals(final JavaLangObject o) throws CGException {
-        if (new Boolean(!new Boolean(o instanceof HMEntry).booleanValue()).booleanValue())
-            return new Boolean(false);
+        if (Boolean.valueOf(!Boolean.valueOf(o instanceof HMEntry).booleanValue()).booleanValue())
+            return Boolean.FALSE;
         {
             HMEntry e = (HMEntry) o;
             Boolean rexpr_6 = null;
@@ -117,7 +117,7 @@ public class HMEntry extends JavaLangObject implements JavaUtilEntry {
         Boolean cond_3 = null;
         cond_3 = value_u_u.IsNil();
         if (cond_3.booleanValue())
-            rexpr_1 = new Integer(0);
+            rexpr_1 = Integer.valueOf(0);
         else
             rexpr_1 = value_u_u.vdm_hashCode();
         return rexpr_1;
