@@ -15,7 +15,7 @@ public class JavaIoOutputStreamWriter extends JavaIoWriter {
 
     private JavaIoOutputStream out = null;
 
-    private static Integer defaultByteBufferSize = new Integer(80);
+    private static Integer defaultByteBufferSize = Integer.valueOf(80);
 
     private HashMap bb = new HashMap();
 
@@ -25,9 +25,9 @@ public class JavaIoOutputStreamWriter extends JavaIoWriter {
 
 
     public JavaIoOutputStreamWriter() throws CGException {
-        defaultByteBufferSize = new Integer(80);
-        nextByte = new Integer(0);
-        nBytes = new Integer(0);
+        defaultByteBufferSize = Integer.valueOf(80);
+        nextByte = Integer.valueOf(0);
+        nBytes = Integer.valueOf(0);
     }
 
 
@@ -58,9 +58,9 @@ public class JavaIoOutputStreamWriter extends JavaIoWriter {
             boolean succ_5 = true;
             HashSet e_set_6 = new HashSet();
             e_set_6 = new HashSet();
-            int ubi_11 = new Integer(new Integer(1).intValue() - new Integer(1).intValue()).intValue();
-            for (int count_12 = new Integer(0).intValue(); count_12 <= ubi_11; count_12++)
-                e_set_6.add(new Integer(count_12));
+            int ubi_11 = Integer.valueOf(Integer.valueOf(1).intValue() - Integer.valueOf(1).intValue()).intValue();
+            for (int count_12 = Integer.valueOf(0).intValue(); count_12 <= ubi_11; count_12++)
+                e_set_6.add(Integer.valueOf(count_12));
             Integer l_u3 = null;
             {
                 for (Iterator enum_14 = e_set_6.iterator(); enum_14.hasNext();) {
@@ -77,8 +77,8 @@ public class JavaIoOutputStreamWriter extends JavaIoWriter {
         JavaLangInteger obj_18 = null;
         obj_18 = (JavaLangInteger) new JavaLangInteger(c);
         mr_17 = obj_18.charValue();
-        cbuf.put(new Integer(0), mr_17);
-        writeICMIntInt(cbuf, new Integer(0), new Integer(1));
+        cbuf.put(Integer.valueOf(0), mr_17);
+        writeICMIntInt(cbuf, Integer.valueOf(0), Integer.valueOf(1));
     }
 
 
@@ -89,8 +89,8 @@ public class JavaIoOutputStreamWriter extends JavaIoWriter {
 
     public void flushBuffer() throws CGException {
         ensureOpen();
-        out.write2(bb, new Integer(0), nextByte);
-        nextByte = UTIL.NumberToInt(UTIL.clone(new Integer(0)));
+        out.write2(bb, Integer.valueOf(0), nextByte);
+        nextByte = UTIL.NumberToInt(UTIL.clone(Integer.valueOf(0)));
     }
 
 
@@ -106,20 +106,20 @@ public class JavaIoOutputStreamWriter extends JavaIoWriter {
         Boolean var1_7 = null;
         Boolean var1_8 = null;
         {
-            if (!(var1_8 = new Boolean((off.intValue()) < (new Integer(0).intValue()))).booleanValue()) {
+            if (!(var1_8 = Boolean.valueOf((off.intValue()) < (Integer.valueOf(0).intValue()))).booleanValue()) {
                 Boolean var2_12 = null;
                 Integer var2_14 = null;
                 HashSet unArg_15 = new HashSet();
                 unArg_15.clear();
                 unArg_15.addAll(cbuf.keySet());
-                var2_14 = new Integer(unArg_15.size());
-                var2_12 = new Boolean((off.intValue()) > (var2_14.intValue()));
+                var2_14 = Integer.valueOf(unArg_15.size());
+                var2_12 = Boolean.valueOf((off.intValue()) > (var2_14.intValue()));
                 var1_8 = var2_12;
             }
         }
         {
             if (!(var1_7 = var1_8).booleanValue())
-                var1_7 = new Boolean((len_u_u.intValue()) < (new Integer(0).intValue()));
+                var1_7 = Boolean.valueOf((len_u_u.intValue()) < (Integer.valueOf(0).intValue()));
         }
         {
             if (!(var1_6 = var1_7).booleanValue()) {
@@ -128,25 +128,25 @@ public class JavaIoOutputStreamWriter extends JavaIoWriter {
                 HashSet unArg_25 = new HashSet();
                 unArg_25.clear();
                 unArg_25.addAll(cbuf.keySet());
-                var2_24 = new Integer(unArg_25.size());
-                var2_20 = new Boolean((new Integer(off.intValue() + len_u_u.intValue()).intValue()) > (var2_24.intValue()));
+                var2_24 = Integer.valueOf(unArg_25.size());
+                var2_20 = Boolean.valueOf((Integer.valueOf(off.intValue() + len_u_u.intValue()).intValue()) > (var2_24.intValue()));
                 var1_6 = var2_20;
             }
         }
         {
             if (!(cond_5 = var1_6).booleanValue())
-                cond_5 = new Boolean((new Integer(off.intValue() + len_u_u.intValue()).intValue()) < (new Integer(0).intValue()));
+                cond_5 = Boolean.valueOf((Integer.valueOf(off.intValue() + len_u_u.intValue()).intValue()) < (Integer.valueOf(0).intValue()));
         }
         if (cond_5.booleanValue())
             throw new VDMSpecException(new JavaLangIndexOutOfBoundsException());
-        else if (new Boolean(len_u_u.intValue() == new Integer(0).intValue()).booleanValue())
+        else if (Boolean.valueOf(len_u_u.intValue() == Integer.valueOf(0).intValue()).booleanValue())
             return;
         {
             Integer ci = off;
-            Integer end_u_u = new Integer(off.intValue() + len_u_u.intValue());
-            Boolean bufferFlushed = new Boolean(false);
+            Integer end_u_u = Integer.valueOf(off.intValue() + len_u_u.intValue());
+            Boolean bufferFlushed = Boolean.FALSE;
             flushBuffer();
-            if (new Boolean((new Integer(nBytes.intValue() - nextByte.intValue()).intValue()) < (len_u_u.intValue())).booleanValue())
+            if (Boolean.valueOf((Integer.valueOf(nBytes.intValue() - nextByte.intValue()).intValue()) < (len_u_u.intValue())).booleanValue())
                 throw new VDMSpecException(new JavaLangConversionBufferFullException());
             else {
                 HashMap rhs_44 = new HashMap();
@@ -156,9 +156,9 @@ public class JavaIoOutputStreamWriter extends JavaIoWriter {
                     boolean succ_58 = true;
                     HashSet e_set_59 = new HashSet();
                     e_set_59 = new HashSet();
-                    int ubi_66 = new Integer(new Integer(nextByte.intValue() + len_u_u.intValue()).intValue() - new Integer(1).intValue()).intValue();
+                    int ubi_66 = Integer.valueOf(Integer.valueOf(nextByte.intValue() + len_u_u.intValue()).intValue() - Integer.valueOf(1).intValue()).intValue();
                     for (int count_67 = nextByte.intValue(); count_67 <= ubi_66; count_67++)
-                        e_set_59.add(new Integer(count_67));
+                        e_set_59.add(Integer.valueOf(count_67));
                     Integer i = null;
                     {
                         for (Iterator enum_69 = e_set_59.iterator(); enum_69.hasNext();) {
@@ -167,7 +167,7 @@ public class JavaIoOutputStreamWriter extends JavaIoWriter {
                             i = elem_68;
                             if (succ_58) {
                                 Integer mr_50 = null;
-                                mr_50 = J2VUTIL.toInt((Character) cbuf.get(new Integer(new Integer(off.intValue() + i.intValue()).intValue() - nextByte.intValue())));
+                                mr_50 = J2VUTIL.toInt((Character) cbuf.get(Integer.valueOf(Integer.valueOf(off.intValue() + i.intValue()).intValue() - nextByte.intValue())));
                                 res_m_48.put(i, mr_50);
                             }
                         }
@@ -177,14 +177,14 @@ public class JavaIoOutputStreamWriter extends JavaIoWriter {
                 rhs_44 = new HashMap(bb);
                 rhs_44.putAll(modmap_45);
                 bb = (HashMap) UTIL.clone(rhs_44);
-                nextByte = UTIL.NumberToInt(UTIL.clone(new Integer(nextByte.intValue() + len_u_u.intValue())));
+                nextByte = UTIL.NumberToInt(UTIL.clone(Integer.valueOf(nextByte.intValue() + len_u_u.intValue())));
             }
         }
     }
 
 
     public void writeStrIntInt(final JavaLangString str, final Integer off, final Integer len_u_u) throws CGException {
-        if (new Boolean((len_u_u.intValue()) < (new Integer(0).intValue())).booleanValue())
+        if (Boolean.valueOf((len_u_u.intValue()) < (Integer.valueOf(0).intValue())).booleanValue())
             throw new VDMSpecException(new JavaLangIndexOutOfBoundsException());
         {
             HashMap cbuf = new HashMap();
@@ -193,9 +193,9 @@ public class JavaIoOutputStreamWriter extends JavaIoWriter {
                 boolean succ_11 = true;
                 HashSet e_set_12 = new HashSet();
                 e_set_12 = new HashSet();
-                int ubi_17 = new Integer(len_u_u.intValue() - new Integer(1).intValue()).intValue();
-                for (int count_18 = new Integer(0).intValue(); count_18 <= ubi_17; count_18++)
-                    e_set_12.add(new Integer(count_18));
+                int ubi_17 = Integer.valueOf(len_u_u.intValue() - Integer.valueOf(1).intValue()).intValue();
+                for (int count_18 = Integer.valueOf(0).intValue(); count_18 <= ubi_17; count_18++)
+                    e_set_12.add(Integer.valueOf(count_18));
                 Integer l_u4 = null;
                 {
                     for (Iterator enum_20 = e_set_12.iterator(); enum_20.hasNext();) {
@@ -208,8 +208,8 @@ public class JavaIoOutputStreamWriter extends JavaIoWriter {
                 }
             }
             cbuf = res_m_8;
-            str.getChars(off, new Integer(off.intValue() + len_u_u.intValue()), cbuf, new Integer(0));
-            writeICMIntInt(cbuf, new Integer(0), len_u_u);
+            str.getChars(off, Integer.valueOf(off.intValue() + len_u_u.intValue()), cbuf, Integer.valueOf(0));
+            writeICMIntInt(cbuf, Integer.valueOf(0), len_u_u);
         }
         ;
     }
@@ -217,7 +217,7 @@ public class JavaIoOutputStreamWriter extends JavaIoWriter {
 
     public JavaIoOutputStreamWriter(final quotes.NIL var_1_1) throws CGException {
         this();
-        isNil = (Boolean) UTIL.clone(new Boolean(true));
+        isNil = Boolean.TRUE;
     }
 
 
@@ -241,9 +241,9 @@ public class JavaIoOutputStreamWriter extends JavaIoWriter {
             boolean succ_15 = true;
             HashSet e_set_16 = new HashSet();
             e_set_16 = new HashSet();
-            int ubi_21 = new Integer(defaultByteBufferSize.intValue() - new Integer(1).intValue()).intValue();
-            for (int count_22 = new Integer(0).intValue(); count_22 <= ubi_21; count_22++)
-                e_set_16.add(new Integer(count_22));
+            int ubi_21 = Integer.valueOf(defaultByteBufferSize.intValue() - Integer.valueOf(1).intValue()).intValue();
+            for (int count_22 = Integer.valueOf(0).intValue(); count_22 <= ubi_21; count_22++)
+                e_set_16.add(Integer.valueOf(count_22));
             Integer l_u3 = null;
             {
                 for (Iterator enum_24 = e_set_16.iterator(); enum_24.hasNext();) {
@@ -251,7 +251,7 @@ public class JavaIoOutputStreamWriter extends JavaIoWriter {
                     succ_15 = true;
                     l_u3 = elem_23;
                     if (succ_15)
-                        res_m_12.put(l_u3, new Integer(0));
+                        res_m_12.put(l_u3, Integer.valueOf(0));
                 }
             }
         }
