@@ -7,8 +7,8 @@ public class JavaTextDecimalFormatSymbols extends JavaLangObject
         implements JavaLangCloneable, JavaIoSerializable {
 
 
-    private static Integer serialVersionUID = new Integer(0);
-    private static final JavaLangClass CLASS = (JavaLangClass) new JavaLangClass(new String("JavaTextDecimalFormatSymbols"), new quotes.CLASS(), new Boolean(false));
+    private static Integer serialVersionUID = Integer.valueOf(0);
+    private static final JavaLangClass CLASS = (JavaLangClass) new JavaLangClass(new String("JavaTextDecimalFormatSymbols"), new quotes.CLASS(), Boolean.FALSE);
 
     public JavaLangClass getJClass() throws CGException {
         return (JavaLangClass) CLASS;
@@ -20,7 +20,7 @@ public class JavaTextDecimalFormatSymbols extends JavaLangObject
 
     public JavaTextDecimalFormatSymbols(final quotes.NIL var_1_1) throws CGException {
         this();
-        isNil = (Boolean) UTIL.clone(new Boolean(true));
+        isNil = Boolean.TRUE;
     }
 
     public JavaTextDecimalFormatSymbols(final JavaUtilLocale locale) throws CGException {
