@@ -38,15 +38,15 @@ public class JavaUtilHashtable extends JavaUtilDictionary implements JavaUtilMap
 // ***** VDMTOOLS END Name=vdmComp
 
 // ***** VDMTOOLS START Name=KEYS KEEP=NO
-    public static Integer KEYS = new Integer(0);
+    public static Integer KEYS = Integer.valueOf(0);
 // ***** VDMTOOLS END Name=KEYS
 
 // ***** VDMTOOLS START Name=VALUES KEEP=NO
-    public static Integer VALUES = new Integer(1);
+    public static Integer VALUES = Integer.valueOf(1);
 // ***** VDMTOOLS END Name=VALUES
 
 // ***** VDMTOOLS START Name=ENTRIES KEEP=NO
-    public static Integer ENTRIES = new Integer(2);
+    public static Integer ENTRIES = Integer.valueOf(2);
 // ***** VDMTOOLS END Name=ENTRIES
 
 // ***** VDMTOOLS START Name=table KEEP=NO
@@ -75,7 +75,7 @@ public class JavaUtilHashtable extends JavaUtilDictionary implements JavaUtilMap
 
 
 // ***** VDMTOOLS START Name=CLASS KEEP=NO
-    private static final JavaLangClass CLASS = (JavaLangClass) new JavaLangClass(new String("JavaUtilHashtable"), new quotes.CLASS(), new Boolean(false));
+    private static final JavaLangClass CLASS = (JavaLangClass) new JavaLangClass(new String("JavaUtilHashtable"), new quotes.CLASS(), Boolean.FALSE);
 // ***** VDMTOOLS END Name=CLASS
 
 
@@ -95,12 +95,12 @@ public class JavaUtilHashtable extends JavaUtilDictionary implements JavaUtilMap
 
 // ***** VDMTOOLS START Name=clear KEEP=NO
     public void clear() throws CGException {
-        modCount = new Integer(modCount.intValue() + 1);
+        modCount = Integer.valueOf(modCount.intValue() + 1);
         for (int i = 0; i < table.size(); i++)
         {
-            table.put(new Integer(i), new  JavaUtilHTEntry(new quotes.NIL()));
+            table.put(Integer.valueOf(i), new  JavaUtilHTEntry(new quotes.NIL()));
         }
-        count = new Integer(0);
+        count = Integer.valueOf(0);
     }
 // ***** VDMTOOLS END Name=clear
 
@@ -115,17 +115,17 @@ public class JavaUtilHashtable extends JavaUtilDictionary implements JavaUtilMap
         HashSet unArg_1 = new HashSet();
         unArg_1.clear();
         unArg_1.addAll(table.keySet());
-        oldCapacity = new Integer(unArg_1.size());
-        Integer newCapacity = new Integer(new Integer(oldCapacity.intValue() * new Integer(2).intValue()).intValue() + new Integer(1).intValue());
+        oldCapacity = Integer.valueOf(unArg_1.size());
+        Integer newCapacity = Integer.valueOf(Integer.valueOf(oldCapacity.intValue() * Integer.valueOf(2).intValue()).intValue() + Integer.valueOf(1).intValue());
         HashMap newMap = new HashMap();
         HashMap res_m_7 = new HashMap();
         {
             boolean succ_11 = true;
             HashSet e_set_12 = new HashSet();
             e_set_12 = new HashSet();
-            int ubi_17 = new Integer(newCapacity.intValue() - new Integer(1).intValue()).intValue();
-            for (int count_18 = new Integer(0).intValue(); count_18 <= ubi_17; count_18++)
-                e_set_12.add(new Integer(count_18));
+            int ubi_17 = Integer.valueOf(newCapacity.intValue() - Integer.valueOf(1).intValue()).intValue();
+            for (int count_18 = Integer.valueOf(0).intValue(); count_18 <= ubi_17; count_18++)
+                e_set_12.add(Integer.valueOf(count_18));
             Integer l_u10 = null;
             {
                 for (Iterator enum_20 = e_set_12.iterator(); enum_20.hasNext();) {
@@ -138,13 +138,13 @@ public class JavaUtilHashtable extends JavaUtilDictionary implements JavaUtilMap
             }
         }
         newMap = res_m_7;
-        modCount = UTIL.NumberToInt(UTIL.clone(new Integer(modCount.intValue() + new Integer(1).intValue())));
+        modCount = UTIL.NumberToInt(UTIL.clone(Integer.valueOf(modCount.intValue() + Integer.valueOf(1).intValue())));
         {
-            Double l_u6 = new Double(newCapacity.intValue() * loadFactor.doubleValue());
+            Double l_u6 = Double.valueOf(newCapacity.intValue() * loadFactor.doubleValue());
             Double l_u1 = null;
             Boolean cond_30 = null;
 	    double tmp_32 = ((Number) l_u6).doubleValue();
-	    l_u1 = new Double(new Double(Math.floor(tmp_32)).intValue());
+	    l_u1 = Double.valueOf(Double.valueOf(Math.floor(tmp_32)).intValue());
             threshold = UTIL.NumberToInt(UTIL.clone(l_u1));
         }
         {
@@ -154,9 +154,9 @@ public class JavaUtilHashtable extends JavaUtilDictionary implements JavaUtilMap
                 Integer l_u3 = i;
                 Integer l_u2 = l_u3;
                 {
-                    i = UTIL.NumberToInt(UTIL.clone(new Integer(l_u3.intValue() - new Integer(1).intValue())));
+                    i = UTIL.NumberToInt(UTIL.clone(Integer.valueOf(l_u3.intValue() - Integer.valueOf(1).intValue())));
                     {
-                        Boolean l_u1 = new Boolean((l_u2.intValue()) > (new Integer(0).intValue()));
+                        Boolean l_u1 = Boolean.valueOf((l_u2.intValue()) > (Integer.valueOf(0).intValue()));
                         l_u11 = (Boolean) UTIL.clone(l_u1);
                     }
                 }
@@ -168,7 +168,7 @@ public class JavaUtilHashtable extends JavaUtilDictionary implements JavaUtilMap
                         Boolean whCrtl_48 = null;
                         Boolean unArg_49 = null;
                         unArg_49 = old.IsNil();
-                        whCrtl_48 = new Boolean(!unArg_49.booleanValue());
+                        whCrtl_48 = Boolean.valueOf(!unArg_49.booleanValue());
                         if (whCrtl_48.booleanValue()) {
                             JavaUtilHTEntry e = old;
                             JavaUtilHTEntry rhs_50 = null;
@@ -180,12 +180,12 @@ public class JavaUtilHashtable extends JavaUtilDictionary implements JavaUtilMap
                                 {
                                     Integer i_1 = null;
                                     i_1 = e.hash;
-                                    if (new Boolean((i_1.intValue()) < (new Integer(0).intValue())).booleanValue())
-                                        var1_52 = new Integer(-i_1.intValue());
+                                    if (Boolean.valueOf((i_1.intValue()) < (Integer.valueOf(0).intValue())).booleanValue())
+                                        var1_52 = Integer.valueOf(-i_1.intValue());
                                     else
                                         var1_52 = i_1;
                                 }
-                                index = new Integer((int) (var1_52.doubleValue() - newCapacity.doubleValue() * Math.floor(var1_52.doubleValue() / newCapacity.doubleValue())));
+                                index = Integer.valueOf((int) (var1_52.doubleValue() - newCapacity.doubleValue() * Math.floor(var1_52.doubleValue() / newCapacity.doubleValue())));
                                 e.next = (JavaUtilHTEntry) (JavaUtilHTEntry) newMap.get(index);
                                 newMap.put(index, e);
                             }
@@ -197,9 +197,9 @@ public class JavaUtilHashtable extends JavaUtilDictionary implements JavaUtilMap
                     Integer l_u3 = i;
                     Integer l_u2 = l_u3;
                     {
-                        i = UTIL.NumberToInt(UTIL.clone(new Integer(l_u3.intValue() - new Integer(1).intValue())));
+                        i = UTIL.NumberToInt(UTIL.clone(Integer.valueOf(l_u3.intValue() - Integer.valueOf(1).intValue())));
                         {
-                            Boolean l_u1 = new Boolean((l_u2.intValue()) > (new Integer(0).intValue()));
+                            Boolean l_u1 = Boolean.valueOf((l_u2.intValue()) > (Integer.valueOf(0).intValue()));
                             l_u11 = (Boolean) UTIL.clone(l_u1);
                         }
                     }
@@ -214,7 +214,7 @@ public class JavaUtilHashtable extends JavaUtilDictionary implements JavaUtilMap
 
 // ***** VDMTOOLS START Name=isEmpty KEEP=NO
     public Boolean isEmpty() throws CGException {
-        return new Boolean(count.intValue() == new Integer(0).intValue());
+        return Boolean.valueOf(count.intValue() == Integer.valueOf(0).intValue());
     }
 // ***** VDMTOOLS END Name=isEmpty
 
@@ -235,7 +235,7 @@ public class JavaUtilHashtable extends JavaUtilDictionary implements JavaUtilMap
 
 //// ***** VDMTOOLS START Name=hashCode KEEP=NO
 //    public Integer hashCode() throws CGException {
-//        Integer h = new Integer(0);
+//        Integer h = Integer.valueOf(0);
 //        return h;
 //    }
 //// ***** VDMTOOLS END Name=hashCode
@@ -243,7 +243,7 @@ public class JavaUtilHashtable extends JavaUtilDictionary implements JavaUtilMap
 
 // ***** VDMTOOLS START Name=toString KEEP=NO
     public JavaLangString toJString() throws CGException {
-        Integer max = new Integer(size().intValue() - new Integer(1).intValue());
+        Integer max = Integer.valueOf(size().intValue() - Integer.valueOf(1).intValue());
         JavaLangStringBuffer buf = new JavaLangStringBuffer();
         {
             JavaLangStringBuffer tmpVal_4 = null;
@@ -251,14 +251,14 @@ public class JavaUtilHashtable extends JavaUtilDictionary implements JavaUtilMap
             ;
         }
         {
-            Integer i = new Integer(0);
-            while (new Boolean((i.intValue()) <= (max.intValue())).booleanValue()) {
-                if (new Boolean((i.intValue()) < (max.intValue())).booleanValue()) {
+            Integer i = Integer.valueOf(0);
+            while (Boolean.valueOf((i.intValue()) <= (max.intValue())).booleanValue()) {
+                if (Boolean.valueOf((i.intValue()) < (max.intValue())).booleanValue()) {
                     JavaLangStringBuffer tmpVal_14 = null;
                     tmpVal_14 = (JavaLangStringBuffer) buf.append(new JavaLangString(new String(", ")));
                     ;
                 }
-                i = UTIL.NumberToInt(UTIL.clone(new Integer(i.intValue() + new Integer(1).intValue())));
+                i = UTIL.NumberToInt(UTIL.clone(Integer.valueOf(i.intValue() + Integer.valueOf(1).intValue())));
             }
         }
         {
@@ -275,14 +275,14 @@ public class JavaUtilHashtable extends JavaUtilDictionary implements JavaUtilMap
 
 // ***** VDMTOOLS START Name=JavaUtilHashtable KEEP=NO
     public JavaUtilHashtable() throws CGException {
-        this(new Integer(11), new Double(1.0));
+        this(Integer.valueOf(11), Double.valueOf(1.0));
     }
 // ***** VDMTOOLS END Name=JavaUtilHashtable
 
 
 // ***** VDMTOOLS START Name=JavaUtilHashtable KEEP=NO
     public JavaUtilHashtable(final Integer initialCapacity) throws CGException {
-        this(initialCapacity, new Double(0.75));
+        this(initialCapacity, Double.valueOf(0.75));
     }
 // ***** VDMTOOLS END Name=JavaUtilHashtable
 
@@ -290,32 +290,32 @@ public class JavaUtilHashtable extends JavaUtilDictionary implements JavaUtilMap
 // ***** VDMTOOLS START Name=get KEEP=NO
     public JavaLangObject get(final JavaLangObject key) throws CGException {
         Integer hash = null;
-        hash = new Integer(key.hashCode());
+        hash = Integer.valueOf(key.hashCode());
         Integer index = null;
         Integer var1_2 = null;
-        if (new Boolean((hash.intValue()) < (new Integer(0).intValue())).booleanValue())
-            var1_2 = new Integer(-hash.intValue());
+        if (Boolean.valueOf((hash.intValue()) < (Integer.valueOf(0).intValue())).booleanValue())
+            var1_2 = Integer.valueOf(-hash.intValue());
         else
             var1_2 = hash;
         Integer var2_8 = null;
         HashSet unArg_9 = new HashSet();
         unArg_9.clear();
         unArg_9.addAll(table.keySet());
-        var2_8 = new Integer(unArg_9.size());
-        index = new Integer((int) (var1_2.doubleValue() - var2_8.doubleValue() * Math.floor(var1_2.doubleValue() / var2_8.doubleValue())));
+        var2_8 = Integer.valueOf(unArg_9.size());
+        index = Integer.valueOf((int) (var1_2.doubleValue() - var2_8.doubleValue() * Math.floor(var1_2.doubleValue() / var2_8.doubleValue())));
         {
             JavaUtilHTEntry e = (JavaUtilHTEntry) table.get(index);
             while (true) {
                 Boolean whCrtl_13 = null;
                 Boolean unArg_14 = null;
                 unArg_14 = e.IsNil();
-                whCrtl_13 = new Boolean(!unArg_14.booleanValue());
+                whCrtl_13 = Boolean.valueOf(!unArg_14.booleanValue());
                 if (whCrtl_13.booleanValue()) {
                     Boolean cond_15 = null;
                     Boolean var1_16 = null;
                     Integer var1_17 = null;
                     var1_17 = e.hash;
-                    var1_16 = new Boolean(var1_17.intValue() == hash.intValue());
+                    var1_16 = Boolean.valueOf(var1_17.intValue() == hash.intValue());
                     {
                         if ((cond_15 = var1_16).booleanValue()) {
                             Boolean var2_20 = null;
@@ -354,7 +354,7 @@ public class JavaUtilHashtable extends JavaUtilDictionary implements JavaUtilMap
 	//        this();
         {
             Integer initialCapacity = initialCapacity_u;
-            if (new Boolean((initialCapacity.intValue()) < (new Integer(0).intValue())).booleanValue()) {
+            if (Boolean.valueOf((initialCapacity.intValue()) < (Integer.valueOf(0).intValue())).booleanValue()) {
                 JavaLangIllegalArgumentException exceptionValue_6 = null;
                 JavaLangString arg_7 = null;
                 JavaLangString par_10 = null;
@@ -363,7 +363,7 @@ public class JavaUtilHashtable extends JavaUtilDictionary implements JavaUtilMap
                 exceptionValue_6 = new JavaLangIllegalArgumentException(arg_7);
                 throw new VDMSpecException(exceptionValue_6);
             }
-            if (new Boolean((loadFactor_1.doubleValue()) <= (new Integer(0).intValue())).booleanValue()) {
+            if (Boolean.valueOf((loadFactor_1.doubleValue()) <= (Integer.valueOf(0).intValue())).booleanValue()) {
                 JavaLangIllegalArgumentException exceptionValue_15 = null;
                 JavaLangString arg_16 = null;
                 JavaLangString par_19 = null;
@@ -372,8 +372,8 @@ public class JavaUtilHashtable extends JavaUtilDictionary implements JavaUtilMap
                 exceptionValue_15 = new JavaLangIllegalArgumentException(arg_16);
                 throw new VDMSpecException(exceptionValue_15);
             }
-            if (new Boolean(initialCapacity.intValue() == new Integer(0).intValue()).booleanValue())
-                initialCapacity = UTIL.NumberToInt(UTIL.clone(new Integer(1)));
+            if (Boolean.valueOf(initialCapacity.intValue() == Integer.valueOf(0).intValue()).booleanValue())
+                initialCapacity = UTIL.NumberToInt(UTIL.clone(Integer.valueOf(1)));
             ((JavaUtilHashtable) this).loadFactor = UTIL.NumberToReal(UTIL.clone(loadFactor_1));
             HashMap rhs_26 = new HashMap();
             HashMap res_m_27 = new HashMap();
@@ -381,9 +381,9 @@ public class JavaUtilHashtable extends JavaUtilDictionary implements JavaUtilMap
                 boolean succ_31 = true;
                 HashSet e_set_32 = new HashSet();
                 e_set_32 = new HashSet();
-                int ubi_37 = new Integer(initialCapacity.intValue() - new Integer(1).intValue()).intValue();
-                for (int count_38 = new Integer(0).intValue(); count_38 <= ubi_37; count_38++)
-                    e_set_32.add(new Integer(count_38));
+                int ubi_37 = Integer.valueOf(initialCapacity.intValue() - Integer.valueOf(1).intValue()).intValue();
+                for (int count_38 = Integer.valueOf(0).intValue(); count_38 <= ubi_37; count_38++)
+                    e_set_32.add(Integer.valueOf(count_38));
                 Integer l_u3 = null;
                 {
                     for (Iterator enum_40 = e_set_32.iterator(); enum_40.hasNext();) {
@@ -398,13 +398,13 @@ public class JavaUtilHashtable extends JavaUtilDictionary implements JavaUtilMap
             rhs_26 = res_m_27;
             table = (HashMap) UTIL.clone(rhs_26);
             {
-                Double l_u6 = new Double(initialCapacity.intValue() * loadFactor_1.doubleValue());
+                Double l_u6 = Double.valueOf(initialCapacity.intValue() * loadFactor_1.doubleValue());
                 Double l_u1 = null;
                 Boolean cond_47 = null;
-                threshold = new Integer(l_u6.intValue());
+                threshold = Integer.valueOf(l_u6.intValue());
             }
-            count = UTIL.NumberToInt(UTIL.clone(new Integer(0)));
-            modCount = UTIL.NumberToInt(UTIL.clone(new Integer(0)));
+            count = UTIL.NumberToInt(UTIL.clone(Integer.valueOf(0)));
+            modCount = UTIL.NumberToInt(UTIL.clone(Integer.valueOf(0)));
         }
     }
 // ***** VDMTOOLS END Name=JavaUtilHashtable
@@ -413,10 +413,10 @@ public class JavaUtilHashtable extends JavaUtilDictionary implements JavaUtilMap
 // ***** VDMTOOLS START Name=getIterator KEEP=NO
     public JavaUtilIterator getIterator(final Integer type) throws CGException {
         JavaUtilIterator res = null;
-        if (new Boolean(count.intValue() == new Integer(0).intValue()).booleanValue())
+        if (Boolean.valueOf(count.intValue() == Integer.valueOf(0).intValue()).booleanValue())
             res = (JavaUtilIterator) UTIL.clone(new JavaUtilEmptyIterator());
         else
-            res = (JavaUtilIterator) UTIL.clone(new JavaUtilEnumerator(type, new Boolean(true), this));
+            res = (JavaUtilIterator) UTIL.clone(new JavaUtilEnumerator(type, Boolean.TRUE, this));
         return (JavaUtilIterator) res;
     }
 // ***** VDMTOOLS END Name=getIterator
@@ -425,26 +425,26 @@ public class JavaUtilHashtable extends JavaUtilDictionary implements JavaUtilMap
 // ***** VDMTOOLS START Name=JavaUtilHashtable KEEP=NO
     public JavaUtilHashtable(final quotes.NIL var_1_1) throws CGException {
         this();
-        isNil = (Boolean) UTIL.clone(new Boolean(true));
+        isNil = Boolean.TRUE;
     }
 // ***** VDMTOOLS END Name=JavaUtilHashtable
 
 
 // ***** VDMTOOLS START Name=equals KEEP=NO
     public Boolean equals(final JavaLangObject o) throws CGException {
-        if (new Boolean(UTIL.equals(o, this)).booleanValue())
-            return new Boolean(true);
-        if (new Boolean(!new Boolean(o instanceof JavaUtilHashtable).booleanValue()).booleanValue())
-            return new Boolean(false);
+        if (Boolean.valueOf(UTIL.equals(o, this)).booleanValue())
+            return Boolean.TRUE;
+        if (Boolean.valueOf(!Boolean.valueOf(o instanceof JavaUtilHashtable).booleanValue()).booleanValue())
+            return Boolean.FALSE;
         {
             JavaUtilHashtable t = (JavaUtilHashtable) o;
             Boolean cond_10 = null;
             Integer var1_11 = null;
             var1_11 = t.size();
-            cond_10 = new Boolean(!(var1_11.intValue() == size().intValue()));
+            cond_10 = Boolean.valueOf(!(var1_11.intValue() == size().intValue()));
             if (cond_10.booleanValue())
-                return new Boolean(false);
-            return new Boolean(true);
+                return Boolean.FALSE;
+            return Boolean.TRUE;
         }
     }
 // ***** VDMTOOLS END Name=equals
@@ -453,31 +453,31 @@ public class JavaUtilHashtable extends JavaUtilDictionary implements JavaUtilMap
 // ***** VDMTOOLS START Name=remove KEEP=NO
     public JavaLangObject remove(final JavaLangObject key) throws CGException {
         Integer hash = null;
-        hash = new Integer(key.hashCode());
+        hash = Integer.valueOf(key.hashCode());
         Integer var1_2 = null;
-        if (new Boolean((hash.intValue()) < (new Integer(0).intValue())).booleanValue())
-            var1_2 = new Integer(-hash.intValue());
+        if (Boolean.valueOf((hash.intValue()) < (Integer.valueOf(0).intValue())).booleanValue())
+            var1_2 = Integer.valueOf(-hash.intValue());
         else
             var1_2 = hash;
         Integer var2_8 = null;
         HashSet unArg_9 = new HashSet();
         unArg_9.clear();
         unArg_9.addAll(table.keySet());
-        var2_8 = new Integer(unArg_9.size());
+        var2_8 = Integer.valueOf(unArg_9.size());
         int index = (int) (var1_2.doubleValue() - var2_8.doubleValue() * Math.floor(var1_2.doubleValue() / var2_8.doubleValue()));
-        for (JavaUtilHTEntry e = (JavaUtilHTEntry) table.get(new Integer(index)),
+        for (JavaUtilHTEntry e = (JavaUtilHTEntry) table.get(Integer.valueOf(index)),
                 prev = new JavaUtilHTEntry(new quotes.NIL());
              !e.IsNil().booleanValue();
              prev = e, e = e.next)
         {
             if ((e.hash.intValue() == hash.intValue()) && e.key.vdm_equals(key).booleanValue())
             {
-                modCount = new Integer(modCount.intValue() + 1);
+                modCount = Integer.valueOf(modCount.intValue() + 1);
                 if (!prev.IsNil().booleanValue())
                     prev.next = e.next;
                 else
-                    table.put(new Integer(index), e.next);
-                count = new Integer(count.intValue()-1);
+                    table.put(Integer.valueOf(index), e.next);
+                count = Integer.valueOf(count.intValue()-1);
                 JavaLangObject oldValue = e.value_u_u;
                 e.value_u_u = new JavaLangObject(new quotes.NIL());
                 return oldValue;
@@ -490,10 +490,10 @@ public class JavaUtilHashtable extends JavaUtilDictionary implements JavaUtilMap
 
 // ***** VDMTOOLS START Name=getEnumeration KEEP=NO
     private JavaUtilEnumeration getEnumeration(final Integer type) throws CGException {
-        if (new Boolean(count.intValue() == new Integer(0).intValue()).booleanValue())
+        if (Boolean.valueOf(count.intValue() == Integer.valueOf(0).intValue()).booleanValue())
             return (JavaUtilEnumeration) new JavaUtilEmptyEnumerator();
         else
-            return (JavaUtilEnumeration) new JavaUtilEnumerator(type, new Boolean(false), this);
+            return (JavaUtilEnumeration) new JavaUtilEnumerator(type, Boolean.FALSE, this);
     }
 // ***** VDMTOOLS END Name=getEnumeration
 
@@ -504,14 +504,14 @@ public class JavaUtilHashtable extends JavaUtilDictionary implements JavaUtilMap
             throw new VDMSpecException(new JavaLangNullPointerException());
 
         for (int i = table.size(); i-- > 0; ){
-            for (JavaUtilHTEntry e = (JavaUtilHTEntry) table.get(new Integer(i)); !e.IsNil().booleanValue();
+            for (JavaUtilHTEntry e = (JavaUtilHTEntry) table.get(Integer.valueOf(i)); !e.IsNil().booleanValue();
                  e = e.next)
             {
                 if (e.value_u_u.vdm_equals(value_u_u).booleanValue())
-                    return new Boolean(true);
+                    return Boolean.TRUE;
             }
         }
-        return new Boolean(false);
+        return Boolean.FALSE;
     }
 // ***** VDMTOOLS END Name=contains
 
@@ -519,32 +519,32 @@ public class JavaUtilHashtable extends JavaUtilDictionary implements JavaUtilMap
 // ***** VDMTOOLS START Name=containsKey KEEP=NO
     public Boolean containsKey(final JavaLangObject key) throws CGException {
         Integer hash = null;
-        hash = new Integer(key.hashCode());
+        hash = Integer.valueOf(key.hashCode());
         Integer index = null;
         Integer var1_2 = null;
-        if (new Boolean((hash.intValue()) < (new Integer(0).intValue())).booleanValue())
-            var1_2 = new Integer(-hash.intValue());
+        if (Boolean.valueOf((hash.intValue()) < (Integer.valueOf(0).intValue())).booleanValue())
+            var1_2 = Integer.valueOf(-hash.intValue());
         else
             var1_2 = hash;
         Integer var2_8 = null;
         HashSet unArg_9 = new HashSet();
         unArg_9.clear();
         unArg_9.addAll(table.keySet());
-        var2_8 = new Integer(unArg_9.size());
-        index = new Integer((int) (var1_2.doubleValue() - var2_8.doubleValue() * Math.floor(var1_2.doubleValue() / var2_8.doubleValue())));
+        var2_8 = Integer.valueOf(unArg_9.size());
+        index = Integer.valueOf((int) (var1_2.doubleValue() - var2_8.doubleValue() * Math.floor(var1_2.doubleValue() / var2_8.doubleValue())));
         {
             JavaUtilHTEntry e = (JavaUtilHTEntry) table.get(index);
             while (true) {
                 Boolean whCrtl_13 = null;
                 Boolean unArg_14 = null;
                 unArg_14 = e.IsNil();
-                whCrtl_13 = new Boolean(!unArg_14.booleanValue());
+                whCrtl_13 = Boolean.valueOf(!unArg_14.booleanValue());
                 if (whCrtl_13.booleanValue()) {
                     Boolean cond_15 = null;
                     Boolean var1_16 = null;
                     Integer var1_17 = null;
                     var1_17 = e.hash;
-                    var1_16 = new Boolean(var1_17.intValue() == hash.intValue());
+                    var1_16 = Boolean.valueOf(var1_17.intValue() == hash.intValue());
                     {
                         if ((cond_15 = var1_16).booleanValue()) {
                             Boolean var2_20 = null;
@@ -555,7 +555,7 @@ public class JavaUtilHashtable extends JavaUtilDictionary implements JavaUtilMap
                         }
                     }
                     if (cond_15.booleanValue())
-                        return new Boolean(true);
+                        return Boolean.TRUE;
                     JavaUtilHTEntry rhs_25 = null;
                     rhs_25 = e.next;
                     e = (JavaUtilHTEntry) UTIL.clone(rhs_25);
@@ -563,7 +563,7 @@ public class JavaUtilHashtable extends JavaUtilDictionary implements JavaUtilMap
                     break;
             }
         }
-        return new Boolean(false);
+        return Boolean.FALSE;
     }
 // ***** VDMTOOLS END Name=containsKey
 
@@ -576,26 +576,26 @@ public class JavaUtilHashtable extends JavaUtilDictionary implements JavaUtilMap
 	//            throw new VDMSpecException(new JavaLangNullPointerException());
         {
             Integer hash = null;
-            hash = new Integer(key.hashCode());
+            hash = Integer.valueOf(key.hashCode());
             Integer index = null;
             Integer var1_5 = null;
-            if (new Boolean((hash.intValue()) < (new Integer(0).intValue())).booleanValue())
-                var1_5 = new Integer(-hash.intValue());
+            if (Boolean.valueOf((hash.intValue()) < (Integer.valueOf(0).intValue())).booleanValue())
+                var1_5 = Integer.valueOf(-hash.intValue());
             else
                 var1_5 = hash;
             Integer var2_11 = null;
             HashSet unArg_12 = new HashSet();
             unArg_12.clear();
             unArg_12.addAll(table.keySet());
-            var2_11 = new Integer(unArg_12.size());
-            index = new Integer((int) (var1_5.doubleValue() - var2_11.doubleValue() * Math.floor(var1_5.doubleValue() / var2_11.doubleValue())));
+            var2_11 = Integer.valueOf(unArg_12.size());
+            index = Integer.valueOf((int) (var1_5.doubleValue() - var2_11.doubleValue() * Math.floor(var1_5.doubleValue() / var2_11.doubleValue())));
             {
                 JavaUtilHTEntry e = (JavaUtilHTEntry) table.get(index);
                 while (true) {
                     Boolean whCrtl_16 = null;
                     Boolean unArg_17 = null;
                     unArg_17 = e.IsNil();
-                    whCrtl_16 = new Boolean(!unArg_17.booleanValue());
+                    whCrtl_16 = Boolean.valueOf(!unArg_17.booleanValue());
                     if (whCrtl_16.booleanValue()) {
                         JavaLangObject old = null;
                         old = e.value_u_u;
@@ -603,7 +603,7 @@ public class JavaUtilHashtable extends JavaUtilDictionary implements JavaUtilMap
                         Boolean var1_20 = null;
                         Integer var1_21 = null;
                         var1_21 = e.hash;
-                        var1_20 = new Boolean(var1_21.intValue() == hash.intValue());
+                        var1_20 = Boolean.valueOf(var1_21.intValue() == hash.intValue());
                         {
                             if ((cond_19 = var1_20).booleanValue()) {
                                 Boolean var2_24 = null;
@@ -624,27 +624,27 @@ public class JavaUtilHashtable extends JavaUtilDictionary implements JavaUtilMap
                         break;
                 }
             }
-            modCount = UTIL.NumberToInt(UTIL.clone(new Integer(modCount.intValue() + new Integer(1).intValue())));
-            if (new Boolean((count.intValue()) >= (threshold.intValue())).booleanValue()) {
+            modCount = UTIL.NumberToInt(UTIL.clone(Integer.valueOf(modCount.intValue() + Integer.valueOf(1).intValue())));
+            if (Boolean.valueOf((count.intValue()) >= (threshold.intValue())).booleanValue()) {
                 rehash();
                 Integer rhs_40 = null;
                 Integer var1_41 = null;
-                if (new Boolean((hash.intValue()) < (new Integer(0).intValue())).booleanValue())
-                    var1_41 = new Integer(-hash.intValue());
+                if (Boolean.valueOf((hash.intValue()) < (Integer.valueOf(0).intValue())).booleanValue())
+                    var1_41 = Integer.valueOf(-hash.intValue());
                 else
                     var1_41 = hash;
                 Integer var2_47 = null;
                 HashSet unArg_48 = new HashSet();
                 unArg_48.clear();
                 unArg_48.addAll(table.keySet());
-                var2_47 = new Integer(unArg_48.size());
-                rhs_40 = new Integer((int) (var1_41.doubleValue() - var2_47.doubleValue() * Math.floor(var1_41.doubleValue() / var2_47.doubleValue())));
+                var2_47 = Integer.valueOf(unArg_48.size());
+                rhs_40 = Integer.valueOf((int) (var1_41.doubleValue() - var2_47.doubleValue() * Math.floor(var1_41.doubleValue() / var2_47.doubleValue())));
                 index = UTIL.NumberToInt(UTIL.clone(rhs_40));
             }
             {
                 JavaUtilHTEntry e = new JavaUtilHTEntry(hash, key, value_u_u, (JavaUtilHTEntry) table.get(index));
                 table.put(index, e);
-                count = UTIL.NumberToInt(UTIL.clone(new Integer(count.intValue() + new Integer(1).intValue())));
+                count = UTIL.NumberToInt(UTIL.clone(Integer.valueOf(count.intValue() + Integer.valueOf(1).intValue())));
                 return (JavaLangObject) new JavaLangObject(new quotes.NIL());
             }
         }
